Fix text-image spacing issue.

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -11,6 +11,7 @@
     float: right;
     min-width: 20%;
     max-width: 100%;
+    margin: 1em;
 }
 
 footer ul {
